--- a/Css Basics/cssbasic.css
+++ b/Css Basics/cssbasic.css
@@ -1,17 +1,92 @@
-body{
-    background-color: aquamarine;
-    color: aliceblue;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: normal;
-    /* Same as above */
-    font: normal 12px Helvetica;
+body {
+  background-color: aquamarine;
+  color: aliceblue;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  /* Same as above */
+  font: normal 12px Helvetica;
 
-    line-height: 10px;
-    margin: 0;
+  line-height: 20px;
+  margin: 0;
 }
 
-.box-1{
-    background-color: darkslategrey;
-    color: azure;
+.contaitner {
+  width: 80%;
+  margin: auto;
+}
+
+.box-1 {
+  background-color: darkslategrey;
+  color: azure;
+
+  border-right: 5px red solid;
+  border-left: 5px red solid;
+  border-top: 5px red solid;
+  border-bottom: 5px red solid;
+
+  /*Same as above*/
+
+  border-width: 3px;
+  border-bottom-width: 10px;
+  border-top-style: dotted;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color: red;
+}
+
+a:active {
+  color: green;
+}
+
+a:visited {
+  color: black;
+}
+
+.categories li {
+  padding-bottom: 6px;
+  border: dotted 1px lightgrey;
+  list-style-image: url("https://cdn-icons-png.flaticon.com/512/100/100470.png");
+}
+
+.box-1 h1 {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 800;
+  font-style: italic;
+  text-decoration: underline;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  word-spacing: 1em;
+}
+
+.box-2 {
+  border: 3px dotted lightgray;
+  padding: 20px;
+  margin: 20px 0;
+}
+
+.categories {
+  border: 1px lightgrey solid;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.categories h2 {
+  text-align: center;
+}
+
+.categories ul {
+  padding: 0;
+  padding-left: 20px;
+  list-style: none;
+}
+
+.my-form{
+    padding: 20px;
 }
